7128597: [macosx] Program freeze when Swing is used with -XstartOnFirstThread Reviewed-by: art